suppress warning in pitest